# work-flow-wise-be

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  compose.minio.yml  docker-compose.yml  init.sql
prisma/: schema.prisma
src/: env.rs  error.rs  impls.rs  main.rs  prisma.rs  response.rs  routes.rs  state.rs  swagger.rs
src/aws/: copy.rs  create.rs  delete.rs  get.rs  mod.rs  rename.rs  transfer.rs
src/comment/controller/: create.rs  get.rs  mod.rs
src/comment/model/: mod.rs
src/comment/service/: mod.rs
src/department/controller/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/department/model/: request.rs  response.rs
src/department/service/: mod.rs
src/extractors/: param.rs
src/file/: utils.rs
src/file/controller/: collab.rs  content.rs  create.rs  delete.rs  mod.rs  restore.rs  update.rs
src/file/model/: collab.rs  create.rs  mod.rs  query.rs  select.rs  update.rs  validation.rs
src/file/service/: create.rs  delete.rs  get.rs  update.rs
src/file_version/: service.rs
src/folder/controller/: collab.rs  content.rs  create.rs  delete.rs  mod.rs  update.rs
src/folder/model/: collab.rs  create.rs  query.rs  select.rs  update.rs
src/folder/service/: create.rs  delete.rs  get.rs  update.rs
src/helpers/: aws_path.rs  id.rs  mod.rs  validation.rs
src/key_result/controller/: add_file.rs  create.rs  delete.rs  get.rs  mod.rs  update.rs
src/key_result/model/: request.rs  response.rs
src/key_result/service/: mod.rs
src/notification/controller/: get.rs  mod.rs  update.rs
src/notification/model/: request.rs  response.rs
src/notification/service/: mod.rs
src/tag/model/: set.rs  (+4 more)
src/users/: mod.rs
src/validation/: uuid.rs
(+57 files in other folders)
