[package]
name = "work-flow-wise-be"
version = "0.1.0"
edition = "2021"
[workspace]
members = ["prisma-cli"]
resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = {version = "1.36.0", features = ["rt-multi-thread", "macros"]}
argon2 = { version = "0.5.2", features = ["std"] }
validator = { version = "0.16.1", features = ["derive"] }
# Async runtime
tokio-util = { version = "0.7.10", features = ["io"] }

# Storage
aws-sdk-s3 = { version = "1.8.0", features = ["rt-tokio"] }
mime_guess = "2.0.4"
bytes = "1.5.0"
zip = "0.6.6"
# Backend
axum = { version = "0.7.4" }
axum_typed_multipart = "0.11.0"
axum-extra = { version = "0.9.2", features = ["cookie", "typed-header"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tower-http = { version = "0.5.1", features = ["cors"] }
fancy-regex = "0.13.0"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.11.22", features = ["json"] }
utoipa = "4.2.0"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
http-serde = "2.0.0"
serde_json = "1.0.113"
chrono = "0.4.33"
dotenvy = "0.15.7"
is_empty = "0.2.0"
uuid = { version = "1.6.1", features = ["serde"] }
axum-auth = "0.7.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.80"
[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"
debug = true
lto = true
strip = "symbols"
